--- a/main.yml
+++ b/main.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
   connection: local
-  vars:
-    personal: "{{ lookup('env', 'HOME') }}/dev"
+  vars_files:
+    - default.config.yml
 
   pre_tasks:
     - name: Ensuring Homebrew Is Installed
