rename personal to dev for better clarity. Added git configs... need to figure out what to do with them now

--- a/default.config.yml
+++ b/default.config.yml
@@ -1,4 +1,4 @@
-personal: "{{ lookup('env', 'HOME') }}/dev"
+dev: "{{ lookup('env', 'HOME') }}/dev"
 homebrew_tap_apps:
   - homebrew/cask-fonts
   - heroku/brew 
