--- a/tasks/git-config.yml
+++ b/tasks/git-config.yml
@@ -1,7 +1,7 @@
 - name: Copy Git Config Files
   copy:
     src: "{{ item }}"
-    dest: "~/dev/ansible/tasks/"
+    dest: "~/"
     mode: 0700
   with_fileglob:
     - "~/dev/ansible/git_config/.*"
