--- a/tasks/projects/bootcamp-projects.yml
+++ b/tasks/projects/bootcamp-projects.yml
@@ -7,6 +7,7 @@
   ansible.builtin.git:
     repo: git@upenn.bootcampcontent.com:upenn-bootcamp/UPENN-VIRT-FSF-PT-11-2022-U-LOLC.git
     dest: "{{ dev }}/bootcamp/student"
+    key_file: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
   when: student_repo.stat.exists == False
 
 # ------------------------------------------------------------------------------------------
@@ -20,6 +21,7 @@
   ansible.builtin.git:
     repo: git@github.com:coding-boot-camp/fullstack-live.git
     dest: "{{ dev }}/bootcamp/instructor"
+    key_file: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
   when: instructor_repo.stat.exists == False
 
 # ------------------------------------------------------------------------------------------
