update ssh task for github

--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -16,7 +16,7 @@
     dest: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa.pub"
     mode: 0644
 
-- name: Scan for SSH host keys.
+- name: Scan for SSH host keys for UPENN GitLab
   local_action:
     module: shell
     cmd: ssh-keyscan upenn.bootcampcontent.com 2>/dev/null
@@ -28,4 +28,18 @@
     module: known_hosts
     key: "{{ item }}"
     name: "upenn.bootcampcontent.com"
+  with_items: "{{ ssh_scan.stdout_lines }}"
+
+- name: Scan for SSH host keys for Github
+  local_action:
+    module: shell
+    cmd: ssh-keyscan github.com 2>/dev/null
+  changed_when: False
+  register: ssh_scan
+
+- name: Update known_hosts.
+  local_action:
+    module: known_hosts
+    key: "{{ item }}"
+    name: "github.com"
   with_items: "{{ ssh_scan.stdout_lines }}"
