--- a/tasks/projects/bootcamp-projects.yml
+++ b/tasks/projects/bootcamp-projects.yml
@@ -1,3 +1,17 @@
+- name: Scan for SSH host keys for UPENN GitLab
+  local_action:
+    module: shell
+    cmd: ssh-keyscan upenn.bootcampcontent.com 2>/dev/null
+  changed_when: False
+  register: ssh_scan_upenn_gitlab
+
+- name: Update known_hosts.
+  local_action:
+    module: known_hosts
+    key: "{{ item }}"
+    name: "upenn.bootcampcontent.com"
+  with_items: "{{ ssh_scan_upenn_gitlab.stdout_lines }}"
+
 - name: Bootcamp - Student Repo - Exists
   stat:
     path: "{{ dev }}/bootcamp/student"
@@ -11,6 +25,20 @@
   when: student_repo.stat.exists == False
 
 # ------------------------------------------------------------------------------------------
+
+- name: Scan for SSH host keys for Github
+  local_action:
+    module: shell
+    cmd: ssh-keyscan github.com 2>/dev/null
+  changed_when: False
+  register: ssh_scan_github
+
+- name: Update known_hosts.
+  local_action:
+    module: known_hosts
+    key: "{{ item }}"
+    name: "github.com"
+  with_items: "{{ ssh_scan_github.stdout_lines }}"
 
 - name: Bootcamp - Instructor Repo - Exists
   stat:
