--- a/tasks/nvm.yml
+++ b/tasks/nvm.yml
@@ -1,3 +1,9 @@
+- name: Create .nvm directory if it does not exist
+  file:
+    path: "{{ lookup('env', 'HOME') }}/.nvm"
+    state: directory
+    mode: '0755'
+
 - name: Install Node @ LTS
   shell: source $HOME/.nvm/nvm.sh && nvm install --lts
   args:
