--- a/default.config.yml
+++ b/default.config.yml
@@ -12,6 +12,7 @@ homebrew_cask_apps:
   - elgato-stream-deck
   - elgato-wave-link
   - font-fira-code
+  - font-fira-code-nerd-font
   - font-jetbrains-mono
   - font-montserrat
   - hey
