add hyperkey and formatting

--- a/default.config.yml
+++ b/default.config.yml
@@ -1,7 +1,7 @@
 dev: "{{ lookup('env', 'HOME') }}/dev"
 homebrew_tap_apps:
   - homebrew/cask-fonts
-  - heroku/brew 
+  - heroku/brew
 homebrew_cask_apps:
   - 1password
   - alfred
@@ -16,6 +16,7 @@ homebrew_cask_apps:
   - font-jetbrains-mono
   - font-montserrat
   - hey
+  - hyperkey
   - insomnia
   - iterm2
   - rectangle-pro
