--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -1,11 +1,13 @@
-# - name: Install Hosts File
-#   copy:
-#     src: "{{ playbook_dir }}/config/hosts"
-#     dest: "/etc/hosts"
 - name: Add dev.getguru.com to hosts
+  become: true
   lineinfile:
     path: /etc/hosts
     line: 127.0.0.1   dev.getguru.com
-    owner: root
-    group: root
+    mode: "0644"
+
+- name: Add devstyles.getguru.com to hosts
+  become: true
+  lineinfile:
+    path: /etc/hosts
+    line: 127.0.0.1   devstyles.getguru.com
     mode: "0644"
